<resources>
    <string name="app_name">Pet On Screen – Cute Shimeji</string>
    <string name="pet_notification_title">Pet on screen is running ..</string>
    <string name="pet_notification_text">Pet is freely exploring the screen</string>
    <string name="admob_app_id">ca-app-pub-4945756407745123~5530127804</string>
    <string name="need_permision">You need to grant permission for Pet Show to appear on the screen!</string>
    <string name="msg_208">Next</string>
    <string name="msg_btn_continue">Next</string>
    <string name="msg_tittle_intro1">Adorable kawaii pet design</string>
    <string name="msg_msg_intro1">Pets move, jump, and interact naturally</string>
    <string name="msg_tittle_intro2">🎀 Cute Relaxing Experience</string>
    <string name="msg_msg_intro2">Touch, drag, and play with your pet</string>
    <string name="msg_tittlhome">Shimeji Control Center</string>
    <string name="on_shime">Enable Shimeji</string>
    <string name="offShime">Disable Shimeji</string>
    <string name="msg_permíssion_info">Note: You need to grant the \'Show over other apps\' permission for the app to work.</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="not_implemented">Not implemented in this device</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="fetch_notification_download_eta_sec">%1$ds left</string>
    <string name="fetch_notification_download_eta_min">%1$dm %2$ds left</string>
    <string name="fetch_notification_download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="fetch_notification_download_complete">Complete</string>
    <string name="fetch_notification_download_failed">Failed</string>
    <string name="fetch_notification_download_pause">Pause</string>
    <string name="fetch_notification_download_resume">Resume</string>
    <string name="fetch_notification_download_retry">Retry</string>
    <string name="fetch_notification_download_cancel">Cancel</string>
    <string name="fetch_notification_download_paused">Paused</string>
    <string name="fetch_notification_download_starting">Starting</string>
    <string name="fetch_notification_download_downloading">Downloading</string>
    <string name="fetch_notification_default_channel_id">fetch_downloads_channel_id</string>
    <string name="fetch_notification_default_channel_name">Downloads</string>
    <string name="deletemessage">Delete?</string>
    <string name="label_default">Default</string>
    <string name="pref_category_theme">Theme</string>
    <string name="pref_theme_mode">Dark mode</string>
    <string name="theme_system">Follow system</string>
    <string name="theme_light">Off</string>
    <string name="theme_dark">On</string>
    <string name="pref_app_theme">App theme</string>
    <string name="theme_monet">Dynamic</string>
    <string name="theme_greenapple">Green Apple</string>
    <string name="theme_midnightdusk">Midnight Dusk</string>
    <string name="theme_laserlemon">Laser Lemon</string>
    <string name="theme_strawberrydaiquiri">Strawberry Daiquiri</string>
    <string name="theme_tako">Tako</string>
    <string name="theme_tealturquoise">Teal &amp; Turquoise</string>
    <string name="theme_yinyang">Yin &amp; Yang</string>
    <string name="theme_yotsuba">Yotsuba</string>
    <string name="pref_dark_theme_pure_black">Pure black dark mode</string>
    <string name="myprofile">My profile</string>
    <string name="akimejilist">Akimeji List</string>
    <string name="servers">Rooms</string>
    <string name="padorulist">Padoru List</string>
    <string name="purchaseshimeji101title">Purchase shimeji101 💊 </string>
    <string name="imagehomebuttonshimeji">Thank you all for your support now we can place the shimejis for free as they are on pc and browser as it always should be, thanks for helping to grow this application that every time we strive to be better, under the hood we only put the best of the best, we always update and no deprecations in the code, we managed to diversify the app but we will not abandon the shimejis or padorus, the previous buyers who were the first to help this application to continue developing will no longer have ads in the sections of akimeji and padorus, let\'s keep growing together.</string>
    <string name="accountstitle">The emails you place will have a premium just like you!</string>
    <string name="accountsmessage">You can place up to 5 different accounts to obtain premium, you will have to enter every 30 days for these accounts to maintain their premium status just like you. </string>
    <string name="pasarondias">30 days passed, log in to your father account to continue using premium features</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="addpremiumaccount">Set premium accounts</string>
    <string name="account">Accounts</string>
    <string name="game">Game</string>
    <string name="accountuser">Users Accounts</string>
    <string name="claps">🤝</string>
    <string name="claps2">👍</string>
    <string name="thanksus">Thanks to you I can continue with the development of this application 🥳</string>
    <string name="thanksuss">Thanks to you I can continue with the development of this application 💕</string>
    <string name="syncdatabodynonpremium">Get a subscription so your favorites are saved online ☁️ and restore them if they were accidentally deleted 👍</string>
    <string name="syncdatafinish">Restoration completed</string>
    <string name="youalready">You have a subscription, thanks!</string>
    <string name="shimeji101">Thanks for purchasing!</string>
    <string name="syncdatastartbody">Once started, wait a few moments, make sure you have a good internet connection and do not exit the application to see the changes reflected, in case there is nothing to restore, nothing will happen</string>
    <string name="syncdatastart">Start Restore 📥 </string>
    <string name="syncdatastarts">Start</string>
    <string name="syncdata">Restore your favorites 📥 </string>
    <string name="danboorufavorites">Danbooru Favorites</string>
    <string name="wallhavenfavorites">WallHaven Favorites</string>
    <string name="titlefeaturepremiumfavorite">Premium Feature 🥇</string>
    <string name="messagefeaturepremiumfavorite">You reached the limit of 2 favorites buy a subscription to be unlimited, backup your data and help this app stay great</string>
    <string name="viewandAd">view a rewarded ad to favorite and get 100 candies</string>
    <string name="message">Message</string>
    <string name="titlefeature">Premium Feature 🥇</string>
    <string name="muchasgracias">Thanks you!</string>
    <string name="suscribetoenableit">Subscribe to enable it!</string>
    <string name="taphere">Tap here!</string>
    <string name="thanksinicio">A help guide to make this feature work is at the end of this page</string>
    <string name="notsetdefault4">Wallpaper flex time </string>
    <string name="notsetdefault5">minutes, minimum is 5 minutes</string>
    <string name="notsetdefault3">Not set, default 5 minutes</string>
    <string name="notsetdefault1">Change wallpaper every</string>
    <string name="notsetdefault2"> minutes, minimum is 15 minutes (google policy)</string>
    <string name="notsetdefault">Not set, default 15 minutes</string>
    <string name="messagepremiumtitle">A great start</string>
    <string name="messagepremium">Thanks to our subscribers we have created this new feature, we tested it for a while and we can assure you that it is the best, you will fall in love with the high quality randoms wallpapers, we use it daily ❤️</string>
    <string name="randomWallpaperpurchased">Random Wallpaper</string>
    <string name="settingsrandompurchased">Settings for random wallpapers</string>
    <string name="randomWallpaper">Random Wallpaper 🔒</string>
    <string name="settingsrandom">Settings for random wallpapers 🔒</string>
    <string name="tryopenauto">Try open auto start</string>
    <string name="tryopenbattery">Try open battery optimization</string>
    <string name="thisbuttondoesno">This button does nothing if your phone is incompatible, please search it manually</string>
    <string name="helpwallpaperbody">Try disable battery optimization for this app in settings->battery optimization->show all apps->akimeji</string>
    <string name="helpwallpaper">Help</string>
    <string name="smartwallpaperbody">Change the wallpaper depending on the time of day to ensure that an image with a white background never appears at night, active by default</string>
    <string name="smartwallpaper">Smart wallpaper</string>
    <string name="enablerandomwallpaperbody">This change your wallpaper</string>
    <string name="enablerandomwallpaper">Enable random wallpaper</string>
    <string name="changewallpaperchange">Tap this to change your homescreen wallpaper now!, not close the app during this work</string>
    <string name="changewallpaper">Change wallpaper now</string>
    <string name="settimewallpaperchange">This change your wallpaper each 15 minutes, min value is 15 (Google policy)</string>
    <string name="settimewallpaper">Set time to change wallpaper</string>
    <string name="setwallpaperflextimebody">Flexible time intelligently takes care of finding the best time to change it during the set period</string>
    <string name="setwallpaperflextime">Set wallpaper flex time</string>
    <string name="changeLockScreenbody">Only change wallpaper in LockScreen, android 7 and up</string>
    <string name="changeLockScreen">Change LockScreen</string>
    <string name="changebothscreensbody">Change wallpaper HomeScreen and LockScreen, android 7 and up</string>
    <string name="changebothscreens">Change both screens</string>
    <string name="differwallpaperschange">Change both screens with different wallpapers, android 7 and up</string>
    <string name="differwallpapers">Differ wallpapers</string>
    <string name="startaproximatetry">This try to change every hour (ignoring Set time to change wallpaper)</string>
    <string name="startaproximate">Start aproximate each hour</string>
    <string name="setInitialDelaybody">Set Initial delay for the first time in minutes (ignoring Start aproximate each hour)</string>
    <string name="setInitialDelay">Set Initial Delay</string>
    <string name="cropwallpaperadjust">Crop the wallpaper to adjust screen device</string>
    <string name="cropwallpapertitle">Crop wallpaper</string>
    <string name="launchnotificationshow">Show a notification each time can change wallpaper</string>
    <string name="launchnotification">Launch notification</string>
    <string name="deviceIdlechange">Only change the wallpaper when device is Idle but retry attempt is disabled, android 6.0 and up</string>
    <string name="deviceIdle">Device Idle</string>
    <string name="networkTypechange">Only change the wallpaper with the selected network: %s</string>
    <string name="networkType">Network Type</string>
    <string name="notchangebatteryNotLow">Not change the wallpaper when battery is low</string>
    <string name="batteryNotLow">Battery Not Low</string>
    <string name="notchangestoragenotlow">Not change the wallpaper when Storage is low</string>
    <string name="tip">🖕 Double-click on the pet on the screen to hide it.</string>
    <string name="enable_begin">Enable to show pet</string>
    <string name="currentPestActive">Pest Active</string>
</resources>